--- a/stylus/moon/colors.styl
+++ b/stylus/moon/colors.styl
@@ -28,6 +28,7 @@ btn_btm_bdr 		= hardize(background_color,35%)
 // Text color
 btn_text_clr		= hardize(primary_color,10%)
 
+
 // -- On hover --
 btn_bg_hover		= softize(btn_bg)
 btn_text_clr_hover	= hardize(btn_text_clr,10%)
@@ -40,12 +41,32 @@ btn_text_clr_prs	= hardize(btn_text_clr_hover,10%)
 btn_bg_prs			= hardize(btn_bg_hover,3%)
 
 
+/////////////////////////////////////////////////////////
+//			     Regular button colors                 //
+/////////////////////////////////////////////////////////
+
+btn_reg_bg				= hardize(background_color,8%)
+btn_reg_bg_from			= hardize(background_color,8%)
+btn_reg_bg_to			= hardize(background_color,10%)
+
+// The main button border colors
+btn_reg_border 			= hardize(background_color,20%)
+
+// Text color
+btn_reg_text_clr		= hardize(secondary_color,10%)
+btn_reg_text_shadow		= transparize(background_color,0.8)
+
+// -- On hover --
+btn_reg_bg_hover		= softize(btn_reg_bg)
+btn_reg_shadow_hover	= softize(btn_reg_bg_hover)
+
+
+
 
 
 /////////////////////////////////////////////////////////
 //	    	You whant to see the colors ?              //
 /////////////////////////////////////////////////////////
-
 /*
 
 body *
