--- a/stylus/moon/functions.styl
+++ b/stylus/moon/functions.styl
@@ -26,8 +26,16 @@ vendor(prop, args)
 	-o-{prop} args
 	{prop} args
 
+/*function-vendor(fun, prop, args)
+	fun -webkit-{prop} args
+	fun -moz-{prop} args
+	fun -o-{prop} args
+	fun {prop} args*/
+
 border-radius()
 	vendor('border-radius', arguments)
 
 box-shadow()
 	vendor('box-shadow', arguments)
+
+
