--- a/styles/stylus/moon/position.styl
+++ b/styles/stylus/moon/position.styl
@@ -95,7 +95,7 @@ a[data-type="button"]
 	padding 0 7px 0 7px
 	margin 0 7px 0 0
 	text-align center
-	float left
+	//float left
 	cursor pointer
 	text-decoration none
 	-webkit-user-select none
