--- a/twig/base.twig
+++ b/twig/base.twig
@@ -1,9 +1,9 @@
 {% include 'header.twig' %}
 
 
-		<header class="lol">
+		<header>
 			<h1>
-				Moon framework page template
+				Moon framework
 			</h1>
 		</header>
 		<nav>
