Adding new rules for input + select fields. Have to add Textarea.

--- a/styles/stylus/moon/colors.styl
+++ b/styles/stylus/moon/colors.styl
@@ -1,12 +1,10 @@
 @import 'functions'
+@import 'variables'
 
 /////////////////////////////////////////////////////////
 //				The colors stylus file                 //
 /////////////////////////////////////////////////////////
 
-primary_color 		= #79b2e2 // lightBlue
-secondary_color 	= #333 
-background_color 	= #FFF // white
 
 h1_color 			= saturate(primary_color,50%)
 
@@ -68,7 +66,8 @@ btn_reg_shadow_hover	= softize(btn_reg_bg_hover)
 //	    	You whant to see the colors ?              //
 /////////////////////////////////////////////////////////
 
-
+/*
 body *
 	background rgba(50,0,0,0.05)
 
+*/
