--- a/styles/style.css
+++ b/styles/style.css
@@ -99,16 +99,99 @@ a[data-type="button"][data-size="huge"] {
   line-height: 48px;
   font-size: 22px;
 }
-input,
-select {
-  border: 1px solid;
+form {
+  margin-bottom: 10px;
+}
+form select,
+form textarea,
+form input[type="text"],
+form input[type="password"],
+form input[type="datetime"],
+form input[type="datetime-local"],
+form input[type="date"],
+form input[type="month"],
+form input[type="time"],
+form input[type="week"],
+form input[type="number"],
+form input[type="email"],
+form input[type="url"],
+form input[type="search"],
+form input[type="tel"],
+form input[type="color"] {
+  width: 188px;
+  height: 20px;
   padding: 4px 6px;
-  margin: 4px 4px 6px 4px;
-  min-height: 16px;
+  margin: 4px 4px;
   background-color: transparent;
 }
-body * {
-  background: rgba(50,0,0,0.05);
+form select {
+  height: 30px;
+  min-width: 202px;
+}
+form[data-align="horizontal"] input,
+form[data-align="horizontal"] select {
+  display: inline-block;
+}
+form[data-align="horizontal"] label {
+  margin-left: 10px;
+}
+form[data-align="vertical"] input,
+form[data-align="vertical"] select,
+form[data-align="vertical"] label {
+  display: block;
+}
+form[data-align="vertical"] input + label,
+form[data-align="vertical"] select + label {
+  margin-top: 10px;
+}
+form[data-align="mixed"] label ~ input,
+form[data-align="mixed"] label ~ select {
+  float: right;
+  clear: right;
+  display: block;
+}
+form[data-align="mixed"] label > input,
+form[data-align="mixed"] label > select {
+  margin-left: 16px;
+}
+form[data-align="mixed"] label {
+  float: left;
+  clear: both;
+  display: block;
+  vertical-align: middle;
+  line-height: 22px;
+  padding: 4px 6px;
+  margin: 4px 24px 4px 4px;
+  height: 22px;
+}
+form[data-align="labelled"] label ~ input,
+form[data-align="labelled"] label ~ select {
+  clear: right;
+  display: block;
+}
+form[data-align="labelled"] label > input,
+form[data-align="labelled"] label > select {
+  margin-left: 16px;
+}
+form[data-align="labelled"] label {
+  float: left;
+  clear: both;
+  display: block;
+  vertical-align: middle;
+  line-height: 22px;
+  padding: 4px 6px;
+  margin: 4px 4px;
+  height: 22px;
+  min-width: 376px;
+}
+form[data-align="labelled"] input + select,
+form[data-align="labelled"] select + input,
+form[data-align="labelled"] select + select,
+form[data-align="labelled"] input + input {
+  clear: right;
+  display: block;
+  float: right;
+  min-width: 376px;
 }
 @media all and (max-width: 640px) {
   body > header + nav > ul > li {
@@ -214,6 +297,48 @@ a[data-type="button"]:active {
   -moz-box-shadow: 0px 1px 1px 0px rgba(255,255,255,0.8) , inset 0 1px 3px 0px rgba(0,0,0,0.2);
   -o-box-shadow: 0px 1px 1px 0px rgba(255,255,255,0.8) , inset 0 1px 3px 0px rgba(0,0,0,0.2);
   box-shadow: 0px 1px 1px 0px rgba(255,255,255,0.8) , inset 0 1px 3px 0px rgba(0,0,0,0.2);
+}
+select,
+textarea,
+input {
+  outline: none;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -o-border-radius: 2px;
+  border-radius: 2px;
+  color: #474747;
+  border: 1px solid #ccc;
+  -webkit-transition: all 0.1s linear 0;
+  -moz-transition: all 0.1s linear 0;
+  -o-transition: all 0.1s linear 0;
+  transition: all 0.1s linear 0;
+  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.05) , 0 1px 0 rgba(255,255,255,0.075);
+  -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.05) , 0 1px 0 rgba(255,255,255,0.075);
+  -o-box-shadow: inset 0 1px 3px rgba(0,0,0,0.05) , 0 1px 0 rgba(255,255,255,0.075);
+  box-shadow: inset 0 1px 3px rgba(0,0,0,0.05) , 0 1px 0 rgba(255,255,255,0.075);
+}
+select:focus,
+textarea:focus,
+input:focus,
+select:focus:hover,
+textarea:focus:hover,
+input:focus:hover {
+  outline: none;
+  border: 1px solid #79b2e2;
+  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.05) , 0 0 8px rgba(121,178,226,0.7);
+  -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.05) , 0 0 8px rgba(121,178,226,0.7);
+  -o-box-shadow: inset 0 1px 3px rgba(0,0,0,0.05) , 0 0 8px rgba(121,178,226,0.7);
+  box-shadow: inset 0 1px 3px rgba(0,0,0,0.05) , 0 0 8px rgba(121,178,226,0.7);
+}
+select:hover,
+textarea:hover,
+input:hover {
+  outline: none;
+  border: 1px solid rgba(121,178,226,0.5);
+  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.05) , 0 0 8px rgba(121,178,226,0.3);
+  -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.05) , 0 0 8px rgba(121,178,226,0.3);
+  -o-box-shadow: inset 0 1px 3px rgba(0,0,0,0.05) , 0 0 8px rgba(121,178,226,0.3);
+  box-shadow: inset 0 1px 3px rgba(0,0,0,0.05) , 0 0 8px rgba(121,178,226,0.3);
 }
 body {
   font-family: 'Oxygen', sans-serif;
