--- a/styles/stylus/moon/base.styl
+++ b/styles/stylus/moon/base.styl
@@ -66,3 +66,37 @@ a[data-type="button"]
 	&:active
 		outline 0
 		box-shadow(0px 1px 1px 0px btn_reg_text_shadow\,inset 0 1px 3px 0px rgba(0, 0, 0, 0.2))
+
+/////////////////////////////////////////////////////////
+//			              Fields                       //
+/////////////////////////////////////////////////////////
+
+
+select,
+textarea,
+input
+	outline: none;
+	border-radius(2px)
+	color btn_reg_text_clr
+	border input_border_width solid btn_reg_border
+	makeItMove(0.1s,all,linear)
+	box-shadow(inset 0 1px 3px rgba(0, 0, 0, .05)\,0 1px 0 rgba(255, 255, 255, .075))
+
+select:focus,
+textarea:focus,
+input:focus,
+select:focus:hover,
+textarea:focus:hover,
+input:focus:hover
+	outline: none;
+	border input_border_width solid primary_color
+	box-shadow(inset 0 1px 3px rgba(0, 0, 0, .05)\,0 0 8px transparize(primary_color,0.7))
+
+select:hover,
+textarea:hover,
+input:hover
+	outline: none;
+	border input_border_width solid transparize(primary_color,0.5)
+	box-shadow(inset 0 1px 3px rgba(0, 0, 0, .05)\,0 0 8px transparize(primary_color,0.3))
+
+	
