Just a little funny modification

--- a/twig/base.twig
+++ b/twig/base.twig
@@ -26,7 +26,7 @@
 			<article data-aside="true">
 				<header>
 					<h2>
-						La récolte des kiwis dans le monde
+						La révolte des kiwis dans le monde
 					</h2>
 				</header>
 				<aside>
