Setting the base for the lambdaweb world

--- a/twig/footer.twig
+++ b/twig/footer.twig
@@ -2,7 +2,7 @@
 
 		<footer>
 
-			<p>&copy; <b>The Moon framework</b> - 2013 - Performed by lambdaweb </p>
+			<p>&copy; <b>lambdaweb</b> - 2013 </p>
 
 			{% block debug %}
 				{# Shows the debug lines #}
