--- a/twig/header.twig
+++ b/twig/header.twig
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		{% block meta %}
-            <title>{% block page_title %}Moon | Default template for the Moon framework{% endblock %}</title>
+            <title>{% block page_title %}Lambdaweb | Welcome{% endblock %}</title>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta name="description" content="">
