Adding a monobox display option for sections

--- a/styles/stylus/moon/position.styl
+++ b/styles/stylus/moon/position.styl
@@ -80,6 +80,21 @@ body
 		
 
 /////////////////////////////////////////////////////////
+//			            Sections(s)                    //
+/////////////////////////////////////////////////////////
+
+body > section[data-display="monobox"]
+	display block
+	text-align center
+	width 50%
+	margin auto
+	margin-top 10%
+	padding 20px
+	
+	
+
+
+/////////////////////////////////////////////////////////
 //			              Buttons                      //
 /////////////////////////////////////////////////////////
 
