--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,14 @@ body > section > article[data-aside="true"] {
 body > footer {
   display: block;
 }
+body > section[data-display="monobox"] {
+  display: block;
+  text-align: center;
+  width: 50%;
+  margin: auto;
+  margin-top: 10%;
+  padding: 20px;
+}
 button[data-button="push"] {
   padding: 12px 6px;
   font-size: 1em;
