--- a/styles/stylus/moon/functions.styl
+++ b/styles/stylus/moon/functions.styl
@@ -39,3 +39,8 @@ box-shadow()
 	vendor('box-shadow', arguments)
 
 
+centeredPad(wid = main-width, pad = main-pad)
+	width: wid
+	padding 0 pad
+	
+
