--- a/styles/stylus/moon/variables.styl
+++ b/styles/stylus/moon/variables.styl
@@ -1,7 +1,25 @@
-
+@import 'functions'
 /////////////////////////////////////////////////////////
 //		       The variables stylus file               //
 /////////////////////////////////////////////////////////
+
+
+/////////////////////////////////////////////////////////
+//				 Base units parameters                 //
+/////////////////////////////////////////////////////////
+
+main-width = 80%
+main-pad = (100% - main-width) /2
+elt-margin = 10px
+top-nav-height = 50px
+
+
+/////////////////////////////////////////////////////////
+//				   Buttons parameters                  //
+/////////////////////////////////////////////////////////
+
+button_width = 80px
+button_height = 40px
 
 
 //\\//\\//\\//\\//\\     COLORS     //\\//\\//\\//\\//\\
