--- a/styles/stylus/moon/colors.styl
+++ b/styles/stylus/moon/colors.styl
@@ -58,8 +58,9 @@ btn_reg_text_shadow		= transparize(background_color,0.8)
 btn_reg_bg_hover		= softize(btn_reg_bg)
 btn_reg_shadow_hover	= softize(btn_reg_bg_hover)
 
-
-
+// -- disabled --
+btn_reg_bg_disabled		= softize(btn_reg_bg_hover)
+btn_reg_shadow_disabled	= softize(btn_reg_shadow_hover)
 
 
 /////////////////////////////////////////////////////////
