--- a/styles/stylus/moon/position.styl
+++ b/styles/stylus/moon/position.styl
@@ -58,7 +58,7 @@ body > section[data-display="monobox"]
 	text-align center
 	width 50%
 	margin auto
-	margin-top 10%
+	margin-top 6*elt-margin
 	padding 20px
 
 
@@ -67,32 +67,32 @@ body > section[data-display="monobox"]
 /////////////////////////////////////////////////////////
 
 *[data-width="full"]
-	width 100%
+	width 98%
 	padding-left 0
 	padding-right 0
-	margin-left 0
-	margin-right 0
+	margin-left 1%
+	margin-right 1%
 
 *[data-width="half"]
-	width 50%
+	width 48%
 	padding-left 0
 	padding-right 0
-	margin-left 0
-	margin-right 0
+	margin-left 1%
+	margin-right 1%
 
 *[data-width="tiers"]
-	width 33%
+	width 31%
 	padding-left 0
 	padding-right 0
-	margin-left 0
-	margin-right 0
+	margin-left 1%
+	margin-right 1%
 
 *[data-width="quarter"]
-	width 25%
+	width 23%
 	padding-left 0
 	padding-right 0
-	margin-left 0
-	margin-right 0
+	margin-left 1%
+	margin-right 1%
 
 /////////////////////////////////////////////////////////
 //			              Buttons                      //
