Disable default background

--- a/styles/stylus/moon/base.styl
+++ b/styles/stylus/moon/base.styl
@@ -10,9 +10,10 @@
 a
 	color link_color
 
+/*
 body
 	background-color background_color
-
+*/
 
 /////////////////////////////////////////////////////////
 //			              Buttons                      //
