Adding the moon javascipt lib to the template theme

--- a/twig/footer.twig
+++ b/twig/footer.twig
@@ -18,6 +18,7 @@
 		{% for js in webdata.scripts %}
 			<script src="{{ webdata.base }}{{ js }}"></script>
 		{% endfor %}
+			<script src="{{ webdata.base }}moon.js"></script>
 
 	{% endblock %}
 
