Setting up MoonJs notification tool + styles

--- a/styles/stylus/moon/base.styl
+++ b/styles/stylus/moon/base.styl
@@ -1,7 +1,7 @@
 @import 'position'
 @import 'colors'
 @import 'responsive'
-
+@import 'helpers'
 
 /////////////////////////////////////////////////////////
 //			                Base                       //
