--- a/styles/stylus/moon/variables.styl
+++ b/styles/stylus/moon/variables.styl
@@ -8,7 +8,7 @@
 //				 Base units parameters                 //
 /////////////////////////////////////////////////////////
 
-main-width = 80%
+main-width = 1200px
 main-pad = (100% - main-width) /2
 elt-margin = 10px
 top-nav-height = 50px
