--- a/styles/stylus/moon/functions.styl
+++ b/styles/stylus/moon/functions.styl
@@ -41,7 +41,7 @@ box-shadow()
 
 centeredPad(wid = main-width, pad = main-pad)
 	width wid
-	padding 0 pad
-	margin 0
+	padding 0 
+	margin auto
 	
 
